--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
          <h1>Important dates</h1>
          <p>
          <ul>
-            <li>Paper submission deadline: tba, 2024
-            <li>Author notification: tba, 2024
-            <li>Camera-ready version deadline: tba, 2024
+            <li>Paper submission deadline: August 30th, 2024
+            <li>Author notification: September 13th, 2024
+            <li>Camera-ready version deadline: September 20th, 2024
             <li>HealthRecSys Workshop: tba, October 2024
             <!-- <li>Paper submission deadline: <strike>July 13th, 2024</strike>July 29th, 2024
             <li>Author notification: <strike>August 6th, 2024</strike> August 16th, 2024
