--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                <li><a href="#committee">Committee</a></li>
                <li><a href="#venue">Venue</a></li>
                <li><a href="#contact">Contact</a></li>
-               <!-- <li><a href="healthRecSys_cfp.txt">Call&nbsp;for&nbsp;Papers</a></li> -->
+
+               <li><a href="healthRecSys_cfp.txt">Call&nbsp;for&nbsp;Papers</a></li>
             </ul>
          </div>
          <div class="well jumbotron">
