--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
          </p>
          <p>
             Submissions are encouraged to include links or demos as attachments to enhance their presentation. All submissions will undergo a rigorous peer-review process to ensure quality and originality. It is imperative that submitted works are not concurrently under review at any other conference, workshop, or journal and contain original, unpublished contributions. Accepted papers will be published according to the ACM RECSYS 2024 WS publication rules.</p>
-            <p>Please use the submission link provided by RecSys to submit your paper via <a href="https://easychair.org/my/conference?conf=recsys2024workshops">EasyChair</a> ></p>
+            Please use the submission link provided by RecSys to submit your paper via <a href="https://easychair.org/my/conference?conf=recsys2024workshops">EasyChair</a> 
             <!--he Workshop proceedings will be submitted to CEUR-WS.</p>
                <p>Please use the workshop's <a href=" https://easychair.org/conferences/?conf=healthrecsys18">EasyChair submission page</a> for submitting your paper.</p>
                <p><b>A few remarks:</b>
