--- a/index.html
+++ b/index.html
@@ -216,21 +216,33 @@
          </ul>
      
          <h3>Program Committee</h3>
-         <p>tba</p>
-         <!-- <ul>
-            <li>Bernd Ludwig, University of Regensburg</li>
-            <li>Shlomo Berkovsky, Macquarie University</li>
-            <li>André Calero Valdez, RWTH Aachen University	</li>
-            <li>Morgan Harvey, Northumbria University	</li>
-            <li>Santiago Hors-Fraile, University of Seville	</li>
-            <li>Yelena Mejova, ISI Foundation</li>
-            <li>Iván Palomares, University of Granada</li>
-            <li>Panagiotis Symeonidis, Free University of Bolzano</li>
-            <li>Ingmar Weber, Qatar Computing Research Institute</li>
-            <li>Martin Wiesner, Heilbronn University</li>
-            <li>Mohammed Khwaja, Imperial College London</li>
-            <li>Jesus Omana, Telefonica Alpha</li>
-         </ul> -->
+<!--          <p>tba</p> -->
+         <ul>
+<li>Miguel Angel Portaz Collado, UNED. Madrid, Spain </li> 
+<li>Alejandro Bellogin, University of Madrid, Spain  </li> 
+<li>Arianna Boldi, Università di Torino, Italy  </li> 
+<li>Ludovico Boratto, University of Cagliari, Italy  </li> 
+<li>peter brusilovsky, University of Pittsburg, US  </li> 
+<li>Ine Coppens, University of Ghent, Belgium  </li> 
+<li>Robin DeCroon, KU Leuve, Belgium   </li> 
+<li>Allegra DeFilippo, DISI, University of Bologna, Italy </li> 
+<li>Morgan Harvey, The University of Sheffield, United Kingdom</li> 
+<li>Eelco Herder, Utrecht University, the Netherlands  </li> 
+<li>Anita Honka, Firstbeat Analytics/Garmin, Finland   </li> 
+<li>Santiago Hors-Fraile, Adhera Health, Spain   </li> 
+<li>Elisabeth Lex, Graz University of Technology, Austria </li> 
+<li>Bernd Ludwig, University of Regensburg, Germany  </li> 
+<li>Noemi Mauro, University of Torino, Italy  </li> 
+<li>Cataldo Musto, University of Bari, Italy  </li> 
+<li>Marco Polignano, University of Bari, Italy  </li> 
+<li>Francesco Ricci, Free University of Bozen-Bolzano, Italy </li> 
+<li>Olga Santos, UNED. Madrid, Spain   </li> 
+<li>Alain Starke, University of Amsterdam, the Netherlands </li> 
+<li>Panagiotis Symeonidis, University of the Aegean, Greece </li> 
+<li>Andrecalero Valdez, University of Lübeck, Germany  </li> 
+<li>Martin Wiesner, Heilbronn University, Germany   </li> 
+<li>Martijn Willemsen, Eindhoven University of Technology, the Netherlands</li>
+         </ul> 
          <hr>
          <a id="venue"></a> 
          <h1>Venue</h1>
