--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
          </p>
          <hr>
          <a id="dates"></a> 
-         <h1>Important dates</h1>
+         <h1>Important dates (AOE)</h1>
          <p>
          <ul>
             <li>Paper submission deadline: August 30th, 2024
