--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
          </p>
          <hr>
          <a id="dates"></a> 
-         <h1>Important dates (AOE)</h1>
+         <h1>Important dates</h1>
          <p>
          <ul>
-            <li>Paper submission deadline: August 30th, 2024
+            <li>Paper submission deadline: August 30th, 2024  (AOE)
             <li>Author notification: September 16th, 2024
             <li>Camera-ready version deadline: September 22th, 2024
             <li>HealthRecSys Workshop: October 18th, 2024
