--- a/index.html
+++ b/index.html
@@ -185,16 +185,22 @@
          <a id="papers"></a> 
          <p>
          <h1>List of accepted papers</h1>
-         tba
-         <!-- <ul>
-<li><b>On the Importance of Context: Privacy Perceptions ofPersonal vs. Health Data in Health Recommender Systems</b><p>Laura Burbach, Poornima Belavadi, Patrick Halbach, Nils Plettenberg, Johannes Nakayama, Lilian Kojan and André Calero Valdez</p></li>
-<li><b>Personalized User Modelling for Context-Aware Lifestyle Recommendations to Improve Sleep</b><p>Vaibhav Pandey, Dhruv Deepak Upadhyay, Nitish Nag and Ramesh Jain</b></p></li>
-<li><b>A Recommender System for Healthy and Personalized Recipes Recommendations</b><p>Florian Pecune, Lucile Callebert and Stacy Marsella</p></li>
-<li><b>A Dynamic Human-in-the-loop Recommender System for Evidence-based Clinical Staging of COVID-19</b><p>Yogatheesan Varatharajah</p></li>
-<li><b>A recommender system for informal bibliotherapy</b><p>Jatin Aswal and Nisheeth Srivastava</p></li>
-<li><b>Recommeding Safe Actions by Learning from Sub-optimal Demonstrations</b><p>Lars Boecking and Patrick Philipp</p></li>
+       <ul>
+<li><b>Tailoring Health: Contextual Variables In Health Recommender Systems</b> <p>Felix Reinsch, Thure Weimann and Jeannette Stark </p></li>
+<li><b>Explaining Decision-Making between Exploration and Repetition: Key Factors for Physical Activity Recommendations</b> <p>Ine Coppens, Toon De Pessemier and Luc Martens </p></li>
+<li><b>Personalized Music Recommendation for People with Autism Spectrum Disorder</b> <p>Liliana Ardissono, Federica Cena and Noemi Mauro </p></li>
+<li><b>Recommending News Articles for Public Health Intelligence</b> <p>Diana F. Sousa, Nicolas Stefanovitch and Luigi Spagnolo </p></li>
+<li><b>Improving the prediction of individual engagement in recommendations using cognitive models</b> <p>Roderick Seow, Yunfan Zhao, Duncan Wood, Milind Tambe and Cleotilde Gonzalez </p></li>
+<li><b>Advancing Visual Food Attractiveness Predictions for Healthy Food Recommender Systems</b> <p>Ayoub El Majjodi, Sohail Ahmed Khan, Alain D. Starke, Mehdi Elahi and Christoph Trattner </p></li>
+<li><b>Position Paper: Towards Recommender System Supported Contact Tracing for Cost-Efficient and Risk Aware Infection Suppression</b> <p>Vladimir Marbukh </p></li>
+<li><b>Enriching Clinical Sample Analysis with Biological Knowledge Graphs: A Preliminary Study</b> <p>Fatemeh Shad Bakhsh, Juan Manuel Rodriguez, Alessandro Ranieri, Kenneth Kastaniegaard and Daniele Dell'Aglio </p></li>
+<li><b>Prompting Large Language Models for Tailored Exercise Recommendations in Office Spaces</b> <p>Gaetano Dibenedetto, Marco Polignano, Pasquale Lops and Giovanni Semeraro </p></li>
+<li><b>Enhancing Health Recommendations through Patient Metadata Integration: A Persona-Based Evaluation Approach</b> <p>Khushboo Thaker, Peter Brusilovsky, Daqing He, Youjia Wang, Behnam Rahdari, Mohammad Hassany and Young Ji Lee </p></li>
+<li><b>Personalizing Exercise Recommendations with Explanations using Multi-Armed Contextual Bandit and Reinforcement Learning</b> <p>Parvati Naliyatthaliyazchayil, Deepishka Pemmasani, Navin Kaushal, Donya Nemati and Saptarshi Purkayastha </p></li>
+<li><b>Health Document Presentation in Patient-Centered Recommender Systems with Carousel Interfaces</b> <p>Behnam Rahdari, Peter Brusilovsky, Daqing He, Khushboo Thaker, Mohammad Hassany, Youjia Wang, Young Ji Lee and Heidi Donovan </p></li>
+<li><b>Design and Assessment of Representative Hybrid Clinical Trials using Health Recommender System</b> <p>Nafis Neehal, Vibha Anand and Kristin P. Bennett </p></li>
 
-</ul>
+</ul>   <!--
          </p>
          <p>
             </p>
@@ -221,25 +227,25 @@
 <li>Alejandro Bellogin, University of Madrid, Spain  </li> 
 <li>Arianna Boldi, Università di Torino, Italy  </li> 
 <li>Ludovico Boratto, University of Cagliari, Italy  </li> 
-<li>peter brusilovsky, University of Pittsburg, US  </li> 
 <li>Ine Coppens, University of Ghent, Belgium  </li> 
 <li>Robin DeCroon, KU Leuve, Belgium   </li> 
+<li> Carlos de Lannoy, TU Delft, the Netherlands</li>
 <li>Allegra DeFilippo, DISI, University of Bologna, Italy </li> 
 <li>Morgan Harvey, The University of Sheffield, United Kingdom</li> 
 <li>Eelco Herder, Utrecht University, the Netherlands  </li> 
 <li>Anita Honka, Firstbeat Analytics/Garmin, Finland   </li> 
 <li>Santiago Hors-Fraile, Adhera Health, Spain   </li> 
+<li>Anastasiia Klimashevskaia, University of Bergen, Norway  </li> 
 <li>Elisabeth Lex, Graz University of Technology, Austria </li> 
 <li>Bernd Ludwig, University of Regensburg, Germany  </li> 
 <li>Noemi Mauro, University of Torino, Italy  </li> 
 <li>Cataldo Musto, University of Bari, Italy  </li> 
 <li>Marco Polignano, University of Bari, Italy  </li> 
 <li>Miguel Angel Portaz Collado, UNED. Madrid, Spain </li> 
-<li>Francesco Ricci, Free University of Bozen-Bolzano, Italy </li> 
 <li>Olga Santos, UNED. Madrid, Spain   </li> 
+<li> Lukas Schulze Balhorn	, TU Delft, the Netherlands</li>
 <li>Alain Starke, University of Amsterdam, the Netherlands </li> 
 <li>Panagiotis Symeonidis, University of the Aegean, Greece </li> 
-<li>Andrecalero Valdez, University of Lübeck, Germany  </li> 
 <li>Martin Wiesner, Heilbronn University, Germany   </li> 
 <li>Martijn Willemsen, Eindhoven University of Technology, the Netherlands</li>
          </ul> 
