--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
 <li>Robin DeCroon, KU Leuve, Belgium   </li> 
 <li> Carlos de Lannoy, TU Delft, the Netherlands</li>
 <li>Allegra DeFilippo, DISI, University of Bologna, Italy </li> 
+<li>Gaetano Dibenedetto, University of Bari, Italy</li>
+<li>Angelo Geninatti Cossatin, University of Torino, Italy</li>
 <li>Morgan Harvey, The University of Sheffield, United Kingdom</li> 
 <li>Eelco Herder, Utrecht University, the Netherlands  </li> 
 <li>Anita Honka, Firstbeat Analytics/Garmin, Finland   </li> 
@@ -244,6 +246,7 @@
 <li>Miguel Angel Portaz Collado, UNED. Madrid, Spain </li> 
 <li>Olga Santos, UNED. Madrid, Spain   </li> 
 <li> Lukas Schulze Balhorn	, TU Delft, the Netherlands</li>
+            <li>Alessandro Silacci, University of Lausanne, Switzerland</li>
 <li>Alain Starke, University of Amsterdam, the Netherlands </li> 
 <li>Panagiotis Symeonidis, University of the Aegean, Greece </li> 
 <li>Martin Wiesner, Heilbronn University, Germany   </li> 
