--- a/index.html
+++ b/index.html
@@ -148,24 +148,24 @@
          <a id="program"></a>
    
          <h1>Program</h1>
-         <p>  tba</p>
-            <!--    
+              
          <h3 id="keynote">Keynote: Shlomo Berkovsky</h3>
          <img src="me.jpg" width="185">
          <p>  </p>
-         <p><b>Title: "Health Personalisation: From Wellbeing to Medicine"</b></p>
+         <p><b>Title: "Healthy and Sustainable Food Recommendations Exploiting Natural Language Processing and Large Language Models"</b></p>
          <p>  </p>
          <p><b>Abstract:</b><br>
-            Current agenda of health personalisation and recommendation research mainly revolves around lifestyle and wellbeing. A number of works on personalised technologies for physical activity, food intake, mental support, health information consumption, and more have been presented at the HealthRecSys workshops and related conferences. While these mainly addressed the patient as the recipient of the personalised service, strikingly little attention has been paid to personalised medical applications targeting clinical users. In this talk, we turn the spotlight to such medical use cases and the advantages personalisation can bring there. We will overview the established health care processes and highlight the touch points, where personalised support can improve the clinician's decision making. Also, we will discuss the differences between patient- and clinician-facing personalisation, particularly focussing on transparency and explainability. All these will be exemplified with recent and ongoing projects in personalised health.
+            The growing focus on healthy and sustainable eating requires innovative tools to support personalized recommendations. This talk will examine how Natural Language Processing (NLP) and Large Language Models (LLMs) can enhance food recommendation systems, enabling them to provide personalized suggestions that promote both individual well-being and environmental responsibility. In particular, we will first show the effectiveness of knowledge-aware recommendation models that encode information about healthy food consumption. Next, we emphasize the importance of natural language processing techniques, which can be used to nudge toward healthier food choices through automatically generated explanations. Finally, we will show recent advances aiming also to include the concept of sustainability in the design and development of conversational food recommenders. In particular, we will discuss a pipeline based on LLMs that identifies healthier and more sustainable food alternatives that can be suitable for the user. We will conclude the presentation by sketching several future directions of this exciting research line.
          </p>
          <p>  </p>
          <p><b>Bio:</b><br>
-            Shlomo Berkovsky is a Computer Scientist, with theoretical and applied expertise in several areas related to human-centric applications of artificial intelligence. He leads the Precision Health stream of the Australian Institute of Health Innovation, which focusses on the application of machine learning methods to develop patient models and personalised predictions of diagnosis and care. He also studies how sensors and physiological responses can predict medical conditions, and how clinicians and patients interact with health technologies. 
+            Cataldo Musto is an Associate Professor at the Department of Computer Science, University of Bari. His research focuses on the adoption of NLP, LLMs, and semantic content representation strategies in knowledge-aware recommender systems and AI algorithms. He authored around 90 scientific articles, and he is one of the authors of the textbook “Semantics in Adaptive and Personalized Systems: Methods, Tools and Applications'', edited by Springer. He is also involved in the organization of conferences such as ACM UMAP and ACM RecSys as Student Volunteers Chair in 2019, Social Chair in 2020, Poster and Demo Chair in 2022, Doctoral Symposium Chair in 2023, and Workshops Chair in 2024. In 2025, he will be the Program Chair of ACM UMAP conference. Since 2016, he has given several tutorials at UMAP and ESWC conferences about the exploitation of semantics-aware representation in content-based personalized systems. Since 2019, he has organized a series of workshops on Explainable User Modeling (ExUM), Knowledge-aware Recommender Systems (KARS) and Explainable Artificial Intelligence (XAI).
          </p>
          <p>
          <h3>Schedule</h3>
          </p>
-         <p>  </p>
+                <p>  tba</p>
+<!--
          <p>
             <b>
                1.00 PM-2.30 PM GMT Opening and Keynote: "Health Personalisation: From Wellbeing to Medicine" <a href="https://drive.google.com/file/d/1v2lBwYyPU_OdmmdqQ1FgoNtCqd7POFHN/view?usp=sharing">Link to recording</a>
