--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
    
          <h1>Program</h1>
               
-         <h3 id="keynote">Keynote: Shlomo Berkovsky</h3>
+         <h3 id="keynote">Keynote: Cataldo Musto</h3>
          <img src="me.jpg" width="185">
          <p>  </p>
          <p><b>Title: "Healthy and Sustainable Food Recommendations Exploiting Natural Language Processing and Large Language Models"</b></p>
