--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
          <h1>Program</h1>
               
          <h3 id="keynote">Keynote: Cataldo Musto</h3>
-         <img src="me.jpg" width="185">
+         <img src="me.png" width="185">
          <p>  </p>
          <p><b>Title: "Healthy and Sustainable Food Recommendations Exploiting Natural Language Processing and Large Language Models"</b></p>
          <p>  </p>
