--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
          <h3 id="keynote">Keynote: Cataldo Musto</h3>
          <img src="me.png" width="185">
          <p>  </p>
-         <p><b>Title: "Healthy and Sustainable Food Recommendations Exploiting Natural Language Processing and Large Language Models"</b></p>
+         <p><b>Title: Healthy and Sustainable Food Recommendations Exploiting Natural Language Processing and Large Language Models</b></p>
          <p>  </p>
+                  <div class="text-justify"
+
          <p><b>Abstract:</b><br>
             The growing focus on healthy and sustainable eating requires innovative tools to support personalized recommendations. This talk will examine how Natural Language Processing (NLP) and Large Language Models (LLMs) can enhance food recommendation systems, enabling them to provide personalized suggestions that promote both individual well-being and environmental responsibility. In particular, we will first show the effectiveness of knowledge-aware recommendation models that encode information about healthy food consumption. Next, we emphasize the importance of natural language processing techniques, which can be used to nudge toward healthier food choices through automatically generated explanations. Finally, we will show recent advances aiming also to include the concept of sustainability in the design and development of conversational food recommenders. In particular, we will discuss a pipeline based on LLMs that identifies healthier and more sustainable food alternatives that can be suitable for the user. We will conclude the presentation by sketching several future directions of this exciting research line.
          </p>
@@ -161,6 +163,7 @@
          <p><b>Bio:</b><br>
             Cataldo Musto is an Associate Professor at the Department of Computer Science, University of Bari. His research focuses on the adoption of NLP, LLMs, and semantic content representation strategies in knowledge-aware recommender systems and AI algorithms. He authored around 90 scientific articles, and he is one of the authors of the textbook “Semantics in Adaptive and Personalized Systems: Methods, Tools and Applications'', edited by Springer. He is also involved in the organization of conferences such as ACM UMAP and ACM RecSys as Student Volunteers Chair in 2019, Social Chair in 2020, Poster and Demo Chair in 2022, Doctoral Symposium Chair in 2023, and Workshops Chair in 2024. In 2025, he will be the Program Chair of ACM UMAP conference. Since 2016, he has given several tutorials at UMAP and ESWC conferences about the exploitation of semantics-aware representation in content-based personalized systems. Since 2019, he has organized a series of workshops on Explainable User Modeling (ExUM), Knowledge-aware Recommender Systems (KARS) and Explainable Artificial Intelligence (XAI).
          </p>
+                  </div>
          <p>
          <h3>Schedule</h3>
          </p>
