--- a/index.html
+++ b/index.html
@@ -168,23 +168,39 @@
          <h3>Schedule</h3>
          </p>
                 <p>  tba</p>
-<!--
-         <p>
-            <b>
-               1.00 PM-2.30 PM GMT Opening and Keynote: "Health Personalisation: From Wellbeing to Medicine" <a href="https://drive.google.com/file/d/1v2lBwYyPU_OdmmdqQ1FgoNtCqd7POFHN/view?usp=sharing">Link to recording</a>
-         </p>
-         </b>
-         <p><b>2.30 PM-3.30 PM GMT Break</p>
-         </b>
-         <p><b>3.30 PM-5.00 PM GMT Paper presentations <a href="https://drive.google.com/file/d/1035jz6oz8aTv407gMinfhBFTtYGKoB09/view?usp=sharing">Link to recording</a></p> 
-         </p>
-         </b>
-         <p><b>5.00 PM-6.00 PM GMT Break</p>
-         </b>
-         <p><b>6.00 PM-7.30 PM GMT Group discussion on collected topics</p>
-         </b>
-         <p>  </p>
-         <hr> -->
+<ul>
+    <li><strong>09:00 - 10:30 :</strong> Opening and keynote</li>
+    <li><strong>10:30 - 11:00 :</strong> Coffee Break (Atrio Cherubini)</li>
+    <li><strong>11:00 - 12:30 :</strong> Interactive Session (Collaborative work groups)</li>
+    <li><strong>12:30 - 14:15 :</strong> Lunch Break (Atrio Cherubini)</li>
+    <li>Poster display and presentations during lunch and coffee breaks</li>
+    <li><strong>14:15 - 15:15 :</strong> Paper Session I
+        <ul>
+            <li>Improving the prediction of individual engagement in recommendations using cognitive models </li>
+            <li>Personalized Music Recommendation for People with Autism Spectrum Disorder </li>
+            <li>Enriching Clinical Sample Analysis with Biological Knowledge Graphs: A Preliminary Study </li>
+            <li>Enhancing Health Recommendations through Patient Metadata Integration: A Persona-Based Evaluation Approach</li>
+            <li>Recommending News Articles for Public Health Intelligence </li>
+            <li>Health Document Presentation in Patient-Centered Recommender Systems with Carousel Interfaces </li>
+            <li>Position Paper: Towards Recommender System Supported Contact Tracing for Cost-Efficient and Risk Aware Infection Suppression</li>
+        </ul>
+    </li>
+    <li><strong>15:15 - 15:45 :</strong> Panel Session I with Authors of Paper Session I</li>
+    <li><strong>15:45 - 16:15 :</strong> Coffee Break (Atrio Cherubini)</li>
+    <li><strong>16:15 – 17:15 :</strong> Paper Session II
+        <ul>
+            <li>Tailoring Health: Contextual Variables In Health Recommender Systems </li>
+            <li>Prompting Large Language Models for Tailored Exercise Recommendations in Office Spaces </li>
+            <li>Explaining Decision-Making between Exploration and Repetition: Key Factors for Physical Activity Recommendations </li>
+            <li>Personalizing Exercise Recommendations with Explanations using Multi-Armed Contextual Bandit and Reinforcement Learning </li>
+            <li>Advancing Visual Food Attractiveness Predictions for Healthy Food Recommender Systems</li>
+            <li>Pitch Presentation: Research in progress - Personalized dietary recommendations through augmentation of rule-based systems with LLM-powered RAG </li>
+            <li>Design and Assessment of Representative Hybrid Clinical Trials using Health Recommender System </li>
+        </ul>
+    </li>
+    <li><strong>17:15 - 17:40 :</strong> Panel Session II with Authors of Paper Session II</li>
+    <li><strong>17:40 - 17:45 :</strong> Wrap up</li>
+</ul>
          <a id="papers"></a> 
          <p>
          <h1>List of accepted papers</h1>
