--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         
             <ul>
             
-            <li id="1_Reinsch_tailoring_159"><a href="https://drive.google.com/file/d/1ZxXYJqK3vydxsged-JxlDLDIFXfYwgmE/view?usp=drive_link">
+            <li id="1_Reinsch_tailoring_159"><a href="https://drive.google.com/file/d/1ZxXYJqK3vydxsged-JxlDLDIFXfYwgmE/view?usp=sharing">
             <span class="CEURTITLE">Tailoring Health: Contextual Variables In Health Recommender Systems</span></a>
            <br>
             <span class="CEURAUTHOR">Felix Reinsch</span>,
