--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
          <hr>
       
          <h1>Previous Workshops on Healthrecommender Systems</h1>
+         <p>All papers of the 2024 Workshop in Health Recommender Systems can be found <a href="https://ceur-ws.org/Vol-3823/">here</a>.</p>
          <p>All papers of the 2020 Workshop in Health Recommender Systems can be found <a href="https://ceur-ws.org/Vol-2684/">here</a>.</p>
          <p>All papers of the 2019 Workshop in Health Recommender Systems can be found <a href="http://ceur-ws.org/Vol-2439/">here</a>.</p>
          <p>All papers of the 2018 Workshop in Health Recommender Systems can be found <a href="http://ceur-ws.org/Vol-2216/">here</a>.</p>
